--- a/layout/_partial/minivaline.ejs
+++ b/layout/_partial/minivaline.ejs
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.minivaline %>"></script>
+<script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.minivaline) %>"></script>
 <script>
 	new MiniValine({
 		el: '#vcomments',
