--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -78,8 +78,8 @@
             <% } %>
             <br>
             <% if (theme.icp.enable) { %>
-            <span id="icp"><img src="<%- theme.jsDelivr.url %><%- config.root %>/medias/icp.png" style="vertical-align: text-bottom;" />
-                <a href="<%- theme.icp.url %>" target="_blank"><%- theme.icp.text %></a>
+            <span id="icp"><img src="<%- theme.jsDelivr.url %><%- url_for('/medias/icp.png') %>" style="vertical-align: text-bottom;" />
+                <a href="<%- url_for(theme.icp.url) %>" target="_blank"><%= theme.icp.text %></a>
             </span>
             <% } %>
         </div>
