--- a/layout/_partial/gitment.ejs
+++ b/layout/_partial/gitment.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- config.root %>/libs/gitment/gitment-default.css">
-<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- config.root %>/css/gitment.css">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- url_for('/libs/gitment/gitment-default.css') %>">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- url_for('/css/gitment.css') %>">
 
 <div class="gitment-card card" data-aos="fade-up">
     <div class="comment_headling" style="font-size: 20px; font-weight: 700; position: relative; padding-left: 20px; top: 15px; padding-bottom: 5px;">
@@ -9,7 +9,7 @@
     <div id="gitment-content" class="card-content"></div>
 </div>
 
-<script src="<%- theme.jsDelivr.url %><%- config.root %>/libs/gitment/gitment.js"></script>
+<script src="<%- theme.jsDelivr.url %><%- url_for('/libs/gitment/gitment.js') %>"></script>
 <script>
 var gitment = new Gitment({
     id: '<%= page.date %>',
