--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -58,8 +58,6 @@
         iconType = 'image/jpeg'
     } else if (faviconExt === 'ico') {
         iconType = 'image/x-icon, image/vnd.microsoft.icon'
-    } else {
-        // more definitions
     }
 %>
 
@@ -76,16 +74,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <%- partial('_partial/google-analytics') %>
     <title><%= pageTitle %></title>
-    <link rel="icon" type="<%= iconType %>" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.favicon %>">
+    <link rel="icon" type="<%= iconType %>" href="<%- theme.jsDelivr.url %><%- url_for(theme.favicon) %>">
 
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.fontAwesome %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.materialize %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.aos %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.animate %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.lightgallery %>">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %>/css/matery.css">
-    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- config.root %>/css/my.css">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.fontAwesome) %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.materialize) %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.aos) %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.animate) %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.lightgallery) %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for('/css/matery.css') %>">
+    <link rel="stylesheet" type="text/css" href="<%- theme.jsDelivr.url %><%- url_for('/css/my.css') %>">
 
-    <script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.jquery %>"></script>
-    
+    <script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.jquery) %>"></script>
+
 </head>
