--- a/layout/_partial/post-cover.ejs
+++ b/layout/_partial/post-cover.ejs
@@ -1,10 +1,7 @@
 <%
-var featureimg = config.root + '/medias/bg.jpg';
+var featureimg = url_for('/medias/bg.jpg');
 if (page.img) {
-    var img = page.img;
-    featureimg = img.startsWith('http://') || img.startsWith('https://') || img.startsWith('//')
-            ? img
-            : config.root + img;
+    featureimg = url_for(page.img);
 } else {
     var hashCode = function (str) {
         if (!str && str.length === 0) {
@@ -23,8 +20,8 @@ if (page.img) {
     var num = Math.abs(hashCode(page.title) % len);
 
     featureimg = theme.jsDelivr.url
-            ? theme.jsDelivr.url + config.root + theme.featureImages[num]
-            : config.root + theme.featureImages[num];
+            ? theme.jsDelivr.url + url_for(theme.featureImages[num])
+            : url_for(theme.featureImages[num]);
 }
 %>
 
