--- a/layout/_widget/video.ejs
+++ b/layout/_widget/video.ejs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.css.dplayer %>">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.dplayer) %>">
 <div class="video-player">
     <% if (theme.video.showTitle) { %>
     <div class="title center-align">
-        <i class="fas fa-video-camera"></i>&nbsp;&nbsp;<%- theme.video.title %>
+        <i class="fas fa-video-camera"></i>&nbsp;&nbsp;<%= theme.video.title %>
     </div>
     <% } %>
     <div class="row">
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<script src="<%- theme.jsDelivr.url %><%- config.root %><%- theme.libs.js.dplayer %>"></script>
+<script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.dplayer) %>"></script>
 <script>
     $(function () {
         new DPlayer({
