--- a/layout/_widget/tag-wordcloud.ejs
+++ b/layout/_widget/tag-wordcloud.ejs
@@ -17,7 +17,7 @@
     <%
     let tagWordArr = [];
     site.tags.map(function(tag) {
-        tagWordArr.push({'text': tag.name, 'weight': tag.length, 'link': decodeURI(tag.permalink)});
+        tagWordArr.push({'text': tag.name, 'weight': tag.length, 'link': url_for(decodeURI(tag.path))});
     });
 
     let tagWords = JSON.stringify(tagWordArr);
