--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -6,7 +6,7 @@
         <div class="col s12 m8 l8 copy-right">
             Copyright&nbsp;&copy;
             <span id="year"><%- theme.time.year %></span>
-            <a href=<%- url_for('/about') %> target="_blank"><%- config.author %></a>
+            <a href="<%- url_for('/about') %>" target="_blank"><%- config.author %></a>
             |&nbsp;Powered by&nbsp;<a href="https://hexo.io/" target="_blank">Hexo</a>
             |&nbsp;Theme&nbsp;<a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>
             <br>
