--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -81,7 +81,7 @@
                             <% if (post.summary && post.summary.length > 0) { %>
                                 <%- post.summary %>
                             <% } else { %>
-                                <%- strip_html(post.content).substring(0, 120) %>
+                                <%- strip_html(post.excerpt).substring(0, 120) %>
                             <% } %>
                         </div>
                         <div class="publish-info">
