--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -13,6 +13,6 @@
 <script src="<%- theme.jsDelivr.url %><%- url_for('/js/search.js') %>"></script>
 <script type="text/javascript">
 $(function () {
-    searchFunc("<%- theme.jsDelivr.url %><%- url_for('search.xml') %>", 'searchInput', 'searchResult');
+    searchFunc("<%- url_for('search.xml') %>", 'searchInput', 'searchResult');
 });
 </script>
