修复开启 jsDelivr 无法搜索问题
修补搜索在 archives、about 等页面无法正常使用问题-1

--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -13,6 +13,6 @@
 <script src="<%- theme.jsDelivr.url %><%- url_for('/js/search.js') %>"></script>
 <script type="text/javascript">
 $(function () {
-    searchFunc("<%- url_for('search.xml') %>", 'searchInput', 'searchResult');
+    searchFunc('/search.xml', 'searchInput', 'searchResult');
 });
 </script>
