--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -82,6 +82,11 @@
     </script>
     <% } %>
 
+	<% if (theme.tuxiaochao.enable) { %>
+	    <div style="position:fixed;bottom:125px;right:9px;cursor: pointer;">
+	        <a title="兔小巢" href="https://support.qq.com/products/<%- theme.tuxiaochao.productId %>"><img src="/medias/contact.png"></a>
+	    </div>
+	<%}%>
     <% if (theme.canvas_nest.enable) { %>
     <script type="text/javascript" color="<%- theme.canvas_nest.color %>"
         pointColor="<%- theme.canvas_nest.pointColor %>" opacity='<%- theme.canvas_nest.opacity %>'
