这两天发现gittalk,gitment 这 些第三方app存在很大的风险，就适配了一个安全隐患小一点的utterances

--- a/layout/contact.ejs
+++ b/layout/contact.ejs
@@ -39,6 +39,10 @@
                 <%- partial('_partial/changyan') %>
             <% } %>
 
+            <% if (theme.utterances && theme.utterances.enable) { %>
+                <%- partial('_partial/utterances.ejs') %>
+            <% } %>
+
         </div>
     </div>
 </main>
