闲着没事加了两个评论系统的支持，不过我没测试

--- a/layout/contact.ejs
+++ b/layout/contact.ejs
@@ -43,6 +43,10 @@
                 <%- partial('_partial/utterances.ejs') %>
             <% } %>
 
+           <% if (theme.vssue && theme.vssue.enable) { %>
+                <%- partial('_partial/vssue.ejs') %>
+            <% } %>
+
         </div>
     </div>
 </main>
