适配 Twikoo 评论系统

--- a/layout/_partial/post-detail.ejs
+++ b/layout/_partial/post-detail.ejs
@@ -190,6 +190,10 @@
         <%- partial('_partial/changyan') %>
     <% } %>
 
+    <% if (theme.twikoo && theme.twikoo.enable) { %>
+        <%- partial('_partial/twikoo') %>
+    <% } %>
+
     <%- partial('_partial/prev-next') %>
 </div>
 
