add theme.video.url/iframeUrl in index to judge whether show video section

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -21,7 +21,7 @@
                         <%- partial('_widget/music') %>
                         <% } %>
 
-                    <% if (theme.video.enable) { %>
+                    <% if (theme.video.enable && ( theme.video.url || theme.video.iframeUrl ) ) { %>
                         <%- partial('_widget/video') %>
                     <% } %>
 
